profile image added

--- a/WebApplication2/Views/Account/Profile.cshtml
+++ b/WebApplication2/Views/Account/Profile.cshtml
@@ -9,14 +9,44 @@
 	</div>
 </div>
 
+
+
 <div class="row mt-4">
-<div class="col-4">
+	<div class="col-6 offset-6 my-3">
+		<div class="mb-4">			
+					<div asp-validation-summary="All" class="small">
+						<i class="fa-solid fa-circle-exclamation fa-2xl text-end mb-4" style="color: #ffffff;"></i>
+					</div>
+				</div>
+	</div>
+
+	<div class="col-6">
+		<form method="post" asp-action="ProfileChangeImage" enctype="multipart/form-data">
+			<div class="text-center mb-3">
+				<img src="~/uploads/@ViewData["ProfileImage"]" width="128" class="img-thumbnail rounded-circle" />
+			</div>
+			<div class="form-group mb-3">
+				<label class="form-label small">Profile Image<span class="badge bg-danger ms-2">Required</span></label>
+			<input type="file" class="form-control" name="file" accept=".jpg"/>
+			<div>
+				<span class="small text-secondary"><i class="fa-sharp fa-solid fa-circle-info me-2"></i>Only jpg files</span>
+			</div>
+			<div class="text-center mt-3">
+				<button class="btn btn-secondary" type="submit"><i class="fa-solid fa-floppy-disk me-2"></i>Save</button>
+			</div>
+			</div>
+		</form>
+		</div>
+<div class="col-6">
+	<div>
+		<h2>Settings</h2>
+		<hr />
+			<p class="small">Scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae feugiat augue.</p>
+	</div>
 		<form method="post" asp-action="ProfileChangeFullName">
 			<div class="form-group">
-				<div class="mb-4">
-					<div asp-validation-summary="All" class="text-danger small"></div>
-				</div>
-					<label class="form-label small">FullName</label>
+				
+					<label class="form-label small">FullName<span class="badge bg-danger ms-2">Required</span></label>
 				<div class="input-group">				
 				<input name="fullname" type="text" class="form-control" placeholder="John Doe" value="@ViewData["FullName"]" /> 
 				<button class="btn btn-secondary" type="submit"><i class="fa-solid fa-floppy-disk me-2"></i>Save</button>
@@ -30,7 +60,7 @@
 
 		<form method="post" asp-action="ProfileChangePassword">
 			<div class="form-group">				
-					<label class="form-label small">New Password</label>
+					<label class="form-label small">New Password<span class="badge bg-danger ms-2">Required</span></label>
 				<div class="input-group">				
 				<input name="password" type="password" class="form-control" placeholder="P@ssW0rd!" /> 
 				<button class="btn btn-secondary" type="submit"><i class="fa-solid fa-floppy-disk me-2"></i>Save</button>
