--- a/WebApplication2/Views/Account/Login.cshtml
+++ b/WebApplication2/Views/Account/Login.cshtml
@@ -4,29 +4,126 @@
 	ViewData["Title"] = "Login";
 }
 
+<style>
+	body {
+		background-color: #f5f5f5;
+		font-family: 'Roboto', sans-serif;
+	}
 
+	form {
+		background-color: #fff;
+		border: 1px solid #ddd;
+		border-radius: 5px;
+		padding: 30px;
+		margin-top: 50px;
+		box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+	}
+
+	.form-label {
+		font-weight: bold;
+		color: #555;
+	}
+
+	.form-group {
+		margin-bottom: 20px;
+		position: relative;
+	}
+
+	.form-group:last-child {
+		margin-bottom: 0;
+	}
+
+	.form-control {
+		border-radius: 25px;
+		padding-left: 40px;
+		border: none;
+		background-color: #f0f0f0;
+		color: #555;
+		box-shadow: none;
+		height: 50px;
+		transition: all 0.3s ease-in-out;
+	}
+
+	.form-control:focus {
+		box-shadow: none;
+		background-color: #fff;
+	}
+
+	.form-control:focus + .fa-circle-user,
+	.form-control:focus + .fa-lock {
+		color: #007bff;
+	}
+
+	.form-control:hover {
+		background-color: #e2e2e2;
+	}
+
+	.fa-circle-user,
+	.fa-lock {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 15px;
+		color: #a5a5a5;
+		font-size: 18px;
+	}
+
+	.btn-primary {
+		background-color: #007bff;
+		border-color: #007bff;
+		border-radius: 25px;
+		font-weight: bold;
+		transition: all 0.3s ease-in-out;
+	}
+
+	.btn-primary:hover {
+		background-color: #0069d9;
+		border-color: #0062cc;
+	}
+
+	.btn-primary:focus {
+		box-shadow: none;
+	}
+
+	.fa-sign-in-alt {
+		font-size: 18px;
+	}
+
+	
+
+		.form-control {
+			height: 45px;
+		}
+
+		.fa-circle-user,
+		.fa-lock {
+			font-size: 16px;
+		}
+	}
+</style>
 <div class="row">
 	<div class="col-4 offset-4">
 		<h1 class="display-4 border-bottom text-center pb-2">@ViewData["Title"]</h1>
 	</div>
 </div>
-
 <div class="row">
-	<div class="col-4 offset-4">		
-		 <form method="post">
-			<div asp-validation-summary="ModelOnly" class="text-danger small"></div>
+	<div class="col-4 offset-4">	
+		<div asp-validation-summary="All" class="text-danger small"></div>
+		 <form method="post">			
 			<div class="form-group mb-3">
-				<label asp-for="Username" class="form-label">Username</label>
-				<input asp-for="Username" class="form-control" placeholder="johndoe" />
+				<label asp-for="Username" class="form-label visually-hidden">Username</label>
+				<input asp-for="Username" class="form-control" placeholder="Username" />
+				<span class="fa-solid fa-circle-user"></span>
 				<span asp-validation-for="Username" class="text-danger small"></span>
 			</div>
 			<div class="form-group mb-3" >
-				<label asp-for="Password" class="form-label">Password</label>
-				<input asp-for="Password" type="password" class="form-control" placeholder="P@ssW0rd!" />
+				<label asp-for="Password" class="form-label visually-hidden">Password</label>
+				<input asp-for="Password" type="password" class="form-control" placeholder="Password" />
+				<span class="fa fa-lock"></span>
 				<span asp-validation-for="Password" class="text-danger small"></span>
 			</div>
 			<div class="form-group d-grid mb-3" >
-				<button type="submit" class="btn btn-primary d-block"><i class="fa-solid fa-right-to-bracket me-2"></i>Login</button>
+				<button type="submit" class="btn btn-primary d-block"><span class="fa fa-sign-in-alt me-2"></span>Login</button>
 			</div>
 		 </form>
 	</div>
